<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/route_dir_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/path_exhibit"
        android:layout_width="357dp"
        android:layout_height="251dp"
        android:gravity="center"
        android:text="TextView"
        android:textSize="12sp"
        android:textStyle="bold"
...
    <!--        android:id="@+id/homeButton"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:onClick="onHomeClick"-->
    <!--        android:text="Home"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toStartOf="@+id/next"-->
    <!--        app:layout_constraintHorizontal_bias="0.441"-->
    <!--        app:layout_constraintStart_toEndOf="@+id/previous"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/path_exhibit"-->
    <!--        app:layout_constraintVertical_bias="0.733" />-->

    <Button
        android:id="@+id/previous"
        android:layout_width="wrap_content"
...
        android:onClick="onPlanClick"
        android:text="List"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/coords_edit_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/coordinates"
        android:inputType="textPersonName"
        android:minHeight="48dp"
...
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/path_exhibit"
        app:layout_constraintVertical_bias="0.035" />

    <Button
        android:id="@+id/coordBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onCoordUpdateClick"
        android:text="Update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coords_edit_txt"
        app:layout_constraintVertical_bias="0.043" />

...
